fix: invisible dropdown keyboard selection (#9)

--- a/scss/_ctp-vars.scss
+++ b/scss/_ctp-vars.scss
@@ -63,7 +63,7 @@
   --ctp-cloze-text-color: rgb(var(--ctp-accent));
   --ctp-icon-color: var(--ctp-link-text-color);
   --ctp-search-icon-color: var(--ctp-link-text-color);
-  --ctp-a-chosen-bg: var(--ctp-secondary-background-color);
+  --ctp-a-chosen-bg: var(--ctp-quaternary-background-color);
   --ctp-right-sidebar-code-bg-color: var(--color-base-30);
 
   --ctp-pie-bg-color: var(--ctp-primary-background-color);
